fix: drag drop on wrap cards

--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -2,7 +2,7 @@
   width: 180px;
   height: 258px;
   margin: 10px;
-  //   position: static;
+  position: static;
 }
 
 // .firstCard {
@@ -20,7 +20,7 @@
   width: 185px;
   background-color: #465658;
   border: 1px solid rgba(255, 255, 255, 0.6);
-  //   position: absolute;
+  position: absolute;
   border-radius: 12px;
   color: #fff;
   text-align: center;
@@ -50,6 +50,29 @@
   border: none;
   margin: 0;
   padding: 0;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.card:last-child {
+  border: none;
+}
+
+.card.cdk-drop-list-dragging .card:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .deck {
